# FreeAgentics

./: .coveragerc  .coveragerc.ci  .coveragerc.dev  .dockerignore  .env.development  .env.example  .env.production.example  .env.production.ssl.template  .env.production.template  .env.production.test  .env.template  .env.test  .flake8  .gitignore  .gitlab-ci-security.yml  .license-header.txt  .pre-commit-bandit-report.json  .pre-commit-config.yaml  .secrets.baseline  .trufflehog.yaml  .trufflehogignore  ACTIVE_INFERENCE_PRODUCTION_VALIDATION_REPORT.md  AGENTS.md  ARCHITECTURAL_VIOLATIONS_DETAILED.md  ASYNC_PERFORMANCE_REPORT.md  BACKEND_COVERAGE_IMPLEMENTATION_SUMMARY.md  BACKEND_COVERAGE_IMPROVEMENT_SUMMARY.md  BENCHMARK_VALIDATION_REPORT.md  BOOTSTRAP_FIXES_SUMMARY.md  BUILD_DOCTOR_ANALYSIS.md  BUILD_DOCTOR_COMPLETE.md  BUILD_DOCTOR_FIXES.md  BUILD_DOCTOR_REPORT.md  BUILD_EXECUTION_REPORT.md  BUILD_STATUS_REPORT.md  BYPASS_PURGE_REPORT_20250721_121435.json  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CLEANUP_SUMMARY.md  CI_FIXES_SUMMARY.md  CLAUDE.md  (+408 more)
.circleci/: config-security.yml
.clinerules/: dev_workflow.md  taskmaster.md
.cursor/: mcp.json
.format_venv/: pyvenv.cfg
.githooks/: pre-receive
.llm_venv/: pyvenv.cfg
.pipeline-config/: unified-pipeline-config.yml
.taskmaster/: config.json  state.json
.test-reports/: comprehensive-report.md
agents/: TASK_4_3_THREADING_OPTIMIZATION_REPORT.md  __init__.py  agent_adapter.py  agent_manager.py  async_agent_manager.py  base_agent.py  coalition_coordinator.py  connection_pool_manager.py  enhanced_agent_coordinator.py  error_handling.py  fallback_handlers.py  gmn_pymdp_adapter.py  hard_failure_handlers.py  inference_engine.py  kg_integration.py  optimized_agent_manager.py  optimized_threadpool_manager.py  performance_optimizer.py  pymdp_adapter.py  pymdp_agent_factory.py  pymdp_error_handling.py  resource_collector.py  threading_optimization_analysis.py  threading_optimization_implementation.py  threading_profiler.py  type_adapter.py  type_helpers.py
alembic/: env.py
api/: main.py  performance_middleware.py  requirements.txt  resilient_db.py  ui_compatibility.py
app/: globals.css  layout.tsx  page.tsx
auth/: __init__.py  certificate_pinning.py  comprehensive_audit_logger.py  dev_auth.py  dev_auth_simple.py  dev_bypass.py  https_enforcement.py  jwt_handler.py  mfa_service.py  ml_threat_detection.py  rbac_enhancements.py  rbac_security_enhancements.py  resource_access_control.py  security_headers.py  security_implementation.py  security_logging.py  ssl_tls_config.py  zero_trust_architecture.py
benchmarks/: PERFORMANCE_BENCHMARKS_README.md  README.md  __init__.py  benchmark_report.md  ci_integration.py  ci_performance_integration.py  frontend_performance_analyzer.py  generate_dashboard.py  performance_benchmark_suite.py  performance_gate.py  performance_regression_detector.py  performance_suite.py  performance_tuning_guide.md  performance_validation_suite.py  production_benchmark.py  quick_threading_vs_multiprocessing_test.py  run_all_benchmarks.sh  run_comprehensive_benchmarks.sh  run_performance_benchmarks.sh  simple_benchmark_runner.py  simple_threading_vs_multiprocessing_test.py  test_agent_spawning.py  test_concurrent_load.py  test_database_queries.py  test_memory_usage.py  test_message_throughput.py  threading_vs_multiprocessing_benchmark.py
certs/: crl.json
cleanup_scripts/: 01_remove_cache_files.sh  02_remove_obsolete_reports.sh
coalitions/: TYPE_IMPROVEMENTS.md  __init__.py  coalition.py  coalition_manager.py  coordination_types.py  formation_strategies.py  member_management.py  types.py
components/: about-button.tsx  about-modal.tsx  agent-list.tsx  autonomous-conversation-manager.tsx  chat-window.tsx  error-boundary.tsx  global-knowledge-graph.tsx  grid-world.tsx  knowledge-graph.tsx  llm-test.tsx  memory-viewer.tsx  nav-bar.tsx  tools-tab.tsx
config/: .black  .coveragerc  .editorconfig  .eslintignore  .eslintrc-enhanced.js  .eslintrc.js  .flake8  .lintstagedrc.js  .markdownlint.json  .prettierignore  .prettierrc.js  .size-limit.json  __init__.py  codecovyml  commitlintconfigjs  env_validator.py  jestconfigjs  jestsetupjs  llm_config.py  llm_config_example.yaml  naming-audit-reportjson  naming-fixes-logjson  packagejson  pyprojecttoml  rate_limiting.py  rate_limiting.yaml  tsconfigjson  validation-reportjson
contexts/: is-sending-context.tsx  llm-context.tsx
core/: __init__.py  environment.py  providers.py
coverage_env/: pyvenv.cfg
database/: OPTIMIZATION_README.md  README.md  __init__.py  agent_conversation_config.py  base.py  connection_manager.py  conversation_models.py  enhanced_connection_manager.py  gmn_reality_checkpoints.py  gmn_versioned_models.py  gmn_versioned_repository.py  indexing_strategy.py  json_encoder.py  models.py  optimization_example.py  optimized_db.py  prompt_models.py  query_optimization.py  query_optimizer.py  session.py  types.py  utils.py  validation.py  vector_models.py
deployment/: nginx-ssl.conf  ssl_config.yaml
docs/: ARCHITECTURAL_LIMITATIONS.md  ARCHITECTURE_OVERVIEW.md  CI_CD_PIPELINE_GUIDE.md  COMPLETE-MODULE-INVENTORY.md  COMPREHENSIVE_TESTING_STRATEGY.md  CONTRIBUTING.md  COVERAGE_MAINTENANCE_GUIDE.md  DATABASE_SETUP.md  DATABASE_SETUP_GUIDE.md  DATABASE_TEST_MIGRATION_COMPLETE.md  DATABASE_TEST_MIGRATION_PLAN.md  DATABASE_TEST_MIGRATION_SUMMARY.md  DEMO-MODULE-ANALYSIS.md  DEPENDENCY_MANAGEMENT_GUIDELINES.md  DEPLOYMENT.md  DEVELOPMENT-PROTOCOLS.md  DOCKER_SECURITY.md  DOCKER_SETUP_GUIDE.md  Diagram.md  ENVIRONMENT_SETUP_IMPROVEMENTS.md  EXPERT-COMMITTEE-INTEGRATION-PLAN.md  ITERATIVE_LOOP_GUIDE.md  MATRIX_POOLING_IMPLEMENTATION.md  MEMORY_OPTIMIZATION_BEST_PRACTICES.md  MULTIPROCESSING_ANALYSIS.md  MULTIPROCESSING_VS_THREADING_ANALYSIS.md  ONBOARDING_GUIDE.md  PERFORMANCE_BOTTLENECKS_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  QUICKSTART.md  RBAC_SECURITY_MODEL.md  README.md  RUFF_INTEGRATION.md  SECURITY_AUDIT_LOGGING.md  SSL_TLS_DEPLOYMENT_GUIDE.md  TESTING_PROCEDURES.md  THREADING_OPTIMIZATION_OPPORTUNITIES.md  TROUBLESHOOTING.md  USER-GUIDE.md  (+13 more)
(+5440 files in other folders)
