# Expert Committee Configuration - CogniticNet Seed-Stage MVP
# Comprehensive tool configuration for investor-grade quality standards
# Committee: Robert C. Martin, Kent Beck, Rich Hickey, Conor Heins

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogniticnet"
version = "0.1.0"
description = "AI agents with Active Inference minds forming coalitions and businesses"
readme = "README.md"
license = "MIT"
authors = [
    {name = "CogniticNet Team", email = "team@cogniticnet.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pymdp>=0.0.1",
    "h3>=3.7.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.5.0",
    "websockets>=11.0.0",
    "python-multipart>=0.0.6",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "networkx>=3.0.0",
    "plotly>=5.15.0",
]

[tool.setuptools.packages.find]
include = ["agents*", "inference*", "coalitions*", "world*", "api*", "infrastructure*"]
exclude = ["web*", "node_modules*", ".*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

# Expert Committee Tool Configurations

[tool.black]
# Rich Hickey: "Simplicity is the ultimate sophistication"
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | venv
  | build
  | dist
  | node_modules
  | \.taskmaster
)/
'''

[tool.isort]
# Robert C. Martin: "Clean code is simple and direct"
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["agents", "inference", "coalitions", "world", "communication", "knowledge"]

[tool.mypy]
# Conor Heins: "Type safety enables mathematical correctness"
# Incorporating user-specified verbose options for comprehensive error reporting
python_version = "3.11"

# Verbose Output Configuration (matching user-specified command)
# Note: verbose output options like --verbose, --show-traceback, etc. are command-line only
# and cannot be set in configuration files
show_traceback = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
show_absolute_path = true

# Type Checking Strictness (Gradual Adoption for MVP)
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
disallow_untyped_calls = false  # Relaxed for gradual adoption
disallow_untyped_defs = false   # Will be enabled incrementally
disallow_incomplete_defs = false # Will be enabled incrementally
check_untyped_defs = true
disallow_subclassing_any = false # Relaxed for third-party libraries
disallow_untyped_decorators = false # Common in agents and inference

# Error Reporting Enhancement
color_output = true
error_summary = true
# Report directories should be specified via command line for timestamped outputs
# any_exprs_report = "mypy_reports"  # Use --any-exprs-report on command line
# linecount_report = "mypy_reports"  # Use --linecount-report on command line

# Module Discovery (ADR-002 Canonical Structure Compliance)
namespace_packages = true
explicit_package_bases = true
mypy_path = "."

# Core Domain Modules (ADR-002: agents, inference, coalitions, world)
files = [
    "agents/",
    "inference/",
    "coalitions/",
    "world/",
    "api/",
    "infrastructure/database/",
    "scripts/development/",
]

# Critical Mathematical Components (Active Inference Priority)
[[tool.mypy.overrides]]
module = [
    "inference.engine.*",
    "inference.gnn.*",
    "inference.llm.*",
    "agents.active_inference.*",
    "agents.base.data_model",
    "agents.base.interfaces"
]
# Stricter checking for mathematical correctness
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_expr = false  # Mathematical operations may need Any temporarily
warn_return_any = true

# Test Modules (Relaxed Standards)
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_errors = false  # Still want to catch type errors in tests
warn_return_any = false

# Third-Party Library Stubs
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torch.nn.*",
    "torch.optim.*",
    "numpy.*",
    "pymdp.*",
    "h3.*",
    "psutil.*",
    "fastapi.*",
    "uvicorn.*",
    "pydantic.*",
    "sqlalchemy.*",
    "alembic.*",
    "GPUtil.*",
    "pycuda.*"
]
ignore_missing_imports = true

# Domain Boundary Enforcement (ADR-003 Dependency Rules)
# Core Domain must not depend on Interface/Infrastructure layers
[[tool.mypy.overrides]]
module = [
    "agents.*",
    "inference.*",
    "coalitions.*",
    "world.*"
]
# These modules should not import from api, web, infrastructure
# Note: mypy doesn't have built-in dependency checking, but we can add plugins later

# Interface Layer (can depend on core domain)
[[tool.mypy.overrides]]
module = [
    "api.*",
    "web.*"
]
# Standard type checking for interface layer
disallow_untyped_defs = false  # Gradual adoption
check_untyped_defs = true

# Infrastructure Layer
[[tool.mypy.overrides]]
module = [
    "infrastructure.*",
    "config.*"
]
# Relaxed for infrastructure complexity
ignore_errors = false
disallow_untyped_defs = false

# Development Scripts (Naming Convention ADR-004 Compliance)
# Note: Scripts are excluded via the exclude pattern below

# Exclude patterns for files that should not be type-checked
exclude = [
    # Build and cache directories
    "build/",
    "dist/",
    ".mypy_cache/",
    ".pytest_cache/",
    "__pycache__/",

    # Version control and TaskMaster
    ".git/",
    ".taskmaster/",

    # Scripts (utility scripts, not core domain)
    "scripts/",

    # Node.js (handled by TypeScript)
    "node_modules/",
    "web/node_modules/",

    # Generated files
    "migrations/versions/",

    # Temporary exclusions (to be removed as type annotations are added)
    "agents/testing/",  # Remove when test framework is type-annotated
]

[tool.pytest.ini_options]
# Kent Beck: "Test everything that could possibly break"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=long",
    "--strict-markers",
    "--strict-config",
    "--color=yes",
    "--durations=10"
]
markers = [
    "asyncio: mark test as asyncio test",
    "slow: mark test as slow (>1 second)",
    "integration: mark test as integration test",
    "unit: mark test as unit test",
    "active_inference: mark test as Active Inference specific",
    "gnn: mark test as GNN processing specific",
    "coalition: mark test as coalition formation specific",
    "edge: mark test as edge deployment specific"
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning:torch.*",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
# Robert C. Martin: "Coverage is a necessary but not sufficient condition for quality"
source = ["agents", "inference", "coalitions", "world", "communication", "knowledge"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/scripts/*",
    "*/migration/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
fail_under = 90
show_missing = true

# Expert Committee Standards
# Robert C. Martin: "Clean code always looks like it was written by someone who cares"
# Kent Beck: "Make it work, make it right, make it fast"
# Rich Hickey: "Simplicity is prerequisite for reliability"
# Conor Heins: "Mathematical correctness requires type safety"
